<resources>
    <string name="app_name">Trip4Pet</string>
    <string name="default_web_client_id">445765053911-db684sdt4lqvbde6h8rdplser2tu0k2v.apps.googleusercontent.com</string>
    <string name="terms" translatable="false">By signing in you are agree with or <b><u>Term of Services</u></b> &amp; <b><u>Privacy Policy</u></b></string>
    <string name="to_trip4pets" translatable="false">to <font color="#ACD8F8">Trip4Pets</font></string>
    <string name="trip4pet" translatable="false">\@Trip4Pet</string>
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus error, itaque maxime rem totam voluptatum?</string>
    <string name="settings">Settings</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_language">Select Language</string>
    <string name="measuing_system">Measuing System</string>
    <string name="language">Language</string>
    <string name="help">Help</string>
    <string name="terms_of_services">Terms of Services</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="menu">Menu</string>
    <string name="my_account">My Account</string>
    <string name="manage_your_account">Manage Your Account</string>
    <string name="add_place">Add Place</string>
    <string name="mark_a_new_location">Mark a New Location</string>
    <string name="application_setting">Application Setting</string>
    <string name="customize_your_experience">Customize Your Experience</string>
    <string name="added_places">Added places</string>
    <string name="comments">Comments</string>
    <string name="visited_places">Visited places</string>
    <string name="account_settings">Account Settings</string>
    <string name="my_name">My Name</string>
    <string name="my_email">My Email</string>
    <string name="password">Password</string>
    <string name="change_your_password">Change your password</string>
    <string name="not_defined">Not defined</string>
    <string name="my_vehicle">My Vehicle</string>
    <string name="delete_my_personal_data">Delete my personal data</string>
    <string name="this_will_delete_your_whole_data">This will delete your whole data</string>
    <string name="van">Van</string>
    <string name="large_van">Large Van</string>
    <string name="mini_van">Mini Van</string>
    <string name="_4x4">4x4</string>
    <string name="overcab_motorhome">Overcab Motorhome</string>
    <string name="low_profile_motorhome">Low-profile Motorhome</string>
    <string name="a_class_motorhome">A-class Motorhome</string>
    <string name="motorhome_heavyweight">Motorhome heavyweight</string>
    <string name="add_a_place">Add a place</string>
    <string name="pick_this_place">Pick this place</string>
    <string name="your_name">Your Name</string>
    <string name="full_name">Full Name</string>
    <string name="change">Change</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="warning">Warning!</string>
    <string name="deleting_data">Deleting your data is permanent and cannot be undone. Are you absolutely sure you want to proceed?</string>
    <string name="add_upto_6_pictures">Add Up to 6 Pictures</string>
    <string name="add_more_photos">Add more Photos</string>
    <string name="name">Name</string>
    <string name="west_beach">West Beach</string>
    <string name="place_type">Place type</string>
    <string name="type_of_place">Type of place</string>
    <string name="is_it_accessible_to_animals">Is it accessible to animals</string>
    <string name="description">Description</string>
    <string name="breif_description">Brief description</string>
    <string name="address">Address</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="activities">Activities</string>
    <string name="activity">Activity</string>
    <string name="services">Services</string>
    <string name="service">Service</string>
    <string name="select_all_activities_that_apply">Select All Activities that apply</string>
    <string name="select_all_services_that_apply">Select All Services that apply</string>
    <string name="please_select_multiple_images">Please Select Multiple Images</string>
    <string name="remove">Remove</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="pet_play_area">Pet Play Area</string>
    <string name="scenic_views">Scenic Views</string>
    <string name="pet_friendly_swimming">Pet-friendly Swimming</string>
    <string name="pet_friendly_climbing_sites">Pet-friendly Climbing Sites</string>
    <string name="pet_friendly_canoe_kayak_bases">Pet-friendly Canoe/Kayak Bases</string>
    <string name="pet_friendly_fishing_spots">Pet-friendly Fishing Spots</string>
    <string name="pet_friendly_beaches">Pet-friendly Beaches</string>
    <string name="pet_friendly_hiking_trails">Pet-friendly Hiking Trails</string>
    <string name="pet_friendly_monuments">Pet-friendly Monuments</string>
    <string name="pet_friendly_mountain_bike_tracks">Pet-friendly Mountain Bike Tracks</string>
    <string name="pet_friendly_windsurf_kite_surf_spots">Pet-friendly Windsurf/Kite-surf Spots</string>
    <string name="scenic_motorcycle_rides">Scenic Motorcycle Rides</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="contact">Contact</string>
    <string name="required_number_of_images_are_selected">Required Number of Images are selected</string>
    <string name="go_pro">Go Pro!</string>
    <string name="access_exclusive_content">Access Exclusive Content</string>
    <string name="unlock_advance_features">Unlock advanced features to take full advantage of Trip4Pet</string>
    <string name="elevate_your_experience">Elevate Your Experience</string>
    <string name="unlock_powerful_search_filters">Unlock Powerful Search Filters</string>
    <string name="refine_your_search">Refine your search with advanced filters. Find what you need exactly, faster and easier!</string>
    <string name="organize_favorites_your_way">Organize Favorites Your Way</string>
    <string name="create_custom_folders">Create custom folders to organize your favorites for easy access. Keep your most-used items neatly categorized!</string>
    <string name="save_big_subscribe_yearly">Subscribe Yearly</string>
    <string name="get_the_best_value_enjoy_and_save_money_by_subscribing_for_a_year">Get the best value! Enjoy and save money by subscribing for a year.</string>
    <string name="subscribe_monthly">Subscribe Monthly</string>
    <string name="pay_as_you_go_enjoy_full_access_with_a_convenient_monthly_subscription">Pay as you go! Enjoy full access with a convenient monthly subscription.</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="we_prioritize_your_security">We prioritize your security. Enjoy a seamless and secure payment process.</string>
    <string name="add_a_review">Add a Review</string>
    <string name="i_m_here">I\'m here</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="edit_this_place">Edit this place</string>
    <string name="directions">Directions</string>
    <string name="favorites">Favorites</string>
    <string name="more">More</string>
    <string name="total_rating">Total Rating</string>
    <string name="no_comments_available">No Comments Available</string>
    <string name="add_a_feedback_to_help_other_users">Add a feedback to help other users</string>
    <string name="rate_this_place">Rate this Place</string>
    <string name="add_your_comment">Add your comment</string>
    <string name="submit">Submit</string>
    <string name="nothing_found">Nothing Found</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="filters">Filters</string>
    <string name="filter_by_ratings">Filter By Ratings</string>
    <string name="rating_greater_than_or_equal_to_4_75">Rating greater than or equal to 4.75</string>
    <string name="rating_greater_than_or_equal_to_4">Rating greater than or equal to 4</string>
    <string name="rating_greater_than_or_equal_to_3">Rating greater than or equal to 3</string>
    <string name="filter_types_of_places">Filter types of places:</string>
    <string name="nearby_services">NearBy Services:</string>
    <string name="activities_nearby">Activities Nearby</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="default_folders">Default folders</string>
    <string name="my_favorites">My Favorites</string>
    <string name="user_folders">User folders</string>
    <string name="unlock_favorites_folder_with_trip4pet">Unlock favorites folder with Trip4Pet+</string>
    <string name="create_a_new_folder">Create a new folder</string>
    <string name="location_not_found">Location not found!</string>
    <string name="this_function_requires_a_gps_connection">This function requires a GPS connection</string>
    <string name="open_setting">Open Setting</string>
    <string name="close">Close</string>
    <string name="longitude_is_empty">Longitude is Empty</string>
    <string name="latitude_is_empty">Latitude is Empty</string>
    <string name="country_is_empty">Country is Empty</string>
    <string name="city_is_empty">City is Empty</string>
    <string name="address_is_empty">Address is Empty</string>
    <string name="description_is_empty">Description is Empty</string>
    <string name="type_of_place_is_empty">Type of place is Empty</string>
    <string name="contact_is_empty">Contact is Empty</string>
    <string name="name_is_empty">Name is Empty</string>
    <string name="place_added_successfully">Place Added Successfully</string>
    <string name="password_is_not_matched">Password is not matched</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="google_sign_in_failed">"Google sign in failed: "</string>
    <string name="google_sign_in_failed_error_code">"Google sign in failed: Error Code - "</string>
    <string name="password_updated_successfully">Password Updated successfully</string>
    <string name="current_password_doesn_t_match">Current Password Doesn\'t Match</string>
    <string name="old_password_is_empty">Old Password is empty</string>
    <string name="new_password_is_empty">New Password is empty</string>
    <string name="create_account">Create Account</string>
    <string name="change_name">Change Name</string>
    <string name="name_updated">Name updated</string>
    <string name="login">Login</string>
    <string name="comment_added">Comment Added</string>
    <string name="removed_from_favorites">Removed from Favorites</string>
    <string name="added_to_favorite">Added to Favorite</string>
    <string name="added_to_your_visited_place">Added to your visited place</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beach_without_signs">Beach without signs</string>
    <string name="veterinarian">Veterinarian</string>
    <string name="coffee_bar">Coffee bar</string>
    <string name="ristorante">Ristorante</string>
    <string name="dog_beach">Dog beach</string>
    <string name="pet_store">Pet Store</string>
    <string name="dog_area">Dog Area</string>
    <string name="camping">Camping</string>
    <string name="albergo">Albergo</string>
    <string name="laundry">Laundry</string>
</resources>