<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="12dp"
    app:strokeWidth="0dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@color/blue_card"
    android:layout_margin="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/typeOfPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:textSize="13sp"
            android:textStyle="bold"
            android:text="@string/add_a_feedback_to_help_other_users" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/rate_this_place" />

        <com.iarcuschin.simpleratingbar.SimpleRatingBar
            android:id="@+id/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srb_starSize="30dp"
            android:layout_marginVertical="10dp"
            app:srb_numberOfStars="5"
            app:srb_rating="0"
            android:layout_gravity="center"
            app:srb_stepSize="1"
            app:srb_borderColor="@color/gold"
            app:srb_fillColor="@color/gold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:boxBackgroundColor="@color/white2"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeWidth="0dp"
            android:textColorHint="@color/text"
            android:hint="@string/add_your_comment"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/submit"
            app:cornerRadius="12dp"
            android:textSize="16sp" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>